--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "southeastwater-usage-scraper",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "test": "jest "
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -10,9 +12,14 @@
   "devDependencies": {
     "@playwright/test": "^1.44.1",
     "@types/dotenv": "^8.2.0",
-    "@types/node": "^20.12.13"
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.12.13",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.4",
+    "typescript": "^5.4.5"
   },
   "dependencies": {
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "zod": "^3.23.8"
   }
 }
