--- a/package.json
+++ b/package.json
@@ -10,16 +10,16 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "@playwright/test": "^1.44.1",
     "@types/dotenv": "^8.2.0",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.12.13",
     "jest": "^29.7.0",
-    "ts-jest": "^29.1.4",
-    "typescript": "^5.4.5"
+    "ts-jest": "^29.1.4"
   },
   "dependencies": {
+    "@playwright/test": "^1.44.1",
     "dotenv": "^16.4.5",
+    "typescript": "^5.4.5",
     "zod": "^3.23.8"
   }
 }
