--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "lint": "npx eslint .",
-    "test": "jest "
+    "start": "ts-node --transpileOnly --files src/index.ts",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -23,8 +24,11 @@
     "ts-jest": "^29.1.4"
   },
   "dependencies": {
+    "@playwright/browser-chromium": "^1.44.1",
     "@playwright/test": "^1.44.1",
     "dotenv": "^16.4.5",
+    "playwright": "^1.44.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5.4.5",
     "zod": "^3.23.8"
   }
