--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "ts-jest": "^29.1.4"
   },
   "dependencies": {
+    "@influxdata/influxdb-client": "^1.33.2",
     "@playwright/browser-chromium": "^1.44.1",
     "@playwright/test": "^1.44.1",
     "dotenv": "^16.4.5",
