--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,17 @@
 {
-  "compilerOptions": {
-    "target": "es2016",
-    "module": "commonjs",
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "strict": true,
-    "skipLibCheck": true
-  },
-  "include": [
-    "src/",
-    "tests/"
-  ],
-  "$schema": "https://json.schemastore.org/tsconfig"
+    "extends": "@tsconfig/strictest/tsconfig.json",
+    "compilerOptions": {
+        "target": "es2016",
+        "module": "commonjs",
+        "esModuleInterop": true,
+        "forceConsistentCasingInFileNames": true,
+        "strict": true,
+        "skipLibCheck": true,
+        // too strict with third-party lib type definitions
+        "exactOptionalPropertyTypes": false,
+        // prevent unreachable code being auto deleted
+        "allowUnreachableCode": true
+    },
+    "include": ["src/", "playwright.config.ts", "tests/"],
+    "$schema": "https://json.schemastore.org/tsconfig"
 }
