--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "lint": "tsc --noEmit && npx eslint .",
     "start": "tsx src/index.ts",
-    "test": "jest"
+    "test": "vitest"
   },
   "keywords": [],
   "author": "",
@@ -14,15 +14,13 @@
   "devDependencies": {
     "@tsconfig/strictest": "^2.0.5",
     "@types/dotenv": "^8.2.0",
-    "@types/jest": "^29.5.12",
     "@types/node": "^20.12.13",
     "@typescript-eslint/eslint-plugin": "^7.12.0",
     "@typescript-eslint/parser": "^7.12.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.1.4"
+    "vitest": "^2.1.5"
   },
   "dependencies": {
     "@influxdata/influxdb-client": "^1.33.2",
