--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,9 @@
 {
     "extends": "@tsconfig/strictest/tsconfig.json",
     "compilerOptions": {
-        "target": "es2016",
-        "module": "commonjs",
+        "target": "ESNext",
+        "module": "NodeNext",
+        "moduleResolution": "NodeNext",
         "esModuleInterop": true,
         "forceConsistentCasingInFileNames": true,
         "strict": true,
@@ -10,7 +11,9 @@
         // too strict with third-party lib type definitions
         "exactOptionalPropertyTypes": false,
         // prevent unreachable code being auto deleted
-        "allowUnreachableCode": true
+        "allowUnreachableCode": true,
+        // allow unused during dev
+        "noUnusedLocals": false
     },
     "include": ["src/", "playwright.config.ts", "vitest.config.ts", "tests/"],
     "$schema": "https://json.schemastore.org/tsconfig"
