--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
         "target": "ESNext",
         "module": "NodeNext",
         "moduleResolution": "NodeNext",
+        "noEmit": true,
         "esModuleInterop": true,
         "forceConsistentCasingInFileNames": true,
         "strict": true,
@@ -15,6 +16,11 @@
         // allow unused during dev
         "noUnusedLocals": false
     },
-    "include": ["src/", "playwright.config.ts", "vitest.config.ts", "tests/"],
-    "$schema": "https://json.schemastore.org/tsconfig"
+    "include": [
+        "src/",
+        "playwright.config.ts",
+        "eslint.config.mjs",
+        "vitest.config.ts",
+        "tests/"
+    ]
 }
